# permiso

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.test  .gitignore  API_SPECIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_FASTAPI.md  DOCKER_GUIDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_FASTAPI.md  README.md  README_FASTAPI.md  SECURITY_DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md  alembic.ini  debug_test.py  dependency_fix_implementation_plan.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  report.xml  report_refacto.xml  requirements-dev.txt  requirements.txt  run-tests-docker.ps1  run_tests.bat  run_tests.ps1  run_tests.py  test_dependency.py  test_problems_analysis.md  test_resolution_guide.md
alembic/: env.py  script.py.mako
alembic/versions/: __init__.py
app/: __init__.py  main.py
app/api/: __init__.py
app/config/: __init__.py  database.py  redis.py  settings.py
app/core/: __init__.py  audit.py  exceptions.py  json.py  jwt.py  password.py  security.py
app/models/: __init__.py  associations.py  base.py  refresh_token.py  role.py  scope.py  service_client.py  session.py  user.py
app/schemas/: __init__.py  auth.py  role.py  service_client.py  user.py
app/services/: session_service.py
data/postgres/: postgresql.auto.conf  postmaster.pid
docker/: Dockerfile.app  Dockerfile.dev  Dockerfile.test
docs/: ANALYSIS_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md
frontend/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_ROADMAP.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TESTING.md
scripts/: README.md  build.bat  build.ps1  build.sh  deploy.py  fresh_deployment.py  init-db.sql  init-dev-db.sql  init-prod-db.sql  init-test-db.sql  init_database.py  initialize_default_data.py  test-runner.bat  test-runner.ps1  test-runner.sh  test.bat  test.sh
tests/: __init__.py  conftest.py  conftest_original.py  test_import.py  test_runner.py
(+502 files in other folders)
